--- a/catkin_ws/src/cpp_templete/package.xml
+++ b/catkin_ws/src/cpp_templete/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="cthung@todo.todo">cthung</maintainer>
+  <maintainer email="cthung@gmail.com">cthung</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
