--- a/catkin_ws/src/python_templete/package.xml
+++ b/catkin_ws/src/python_templete/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="ual@todo.todo">ual</maintainer>
+  <maintainer email="poilkj09862@gmail.com">CTHung</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
