--- a/autoCreateTemplate/src/CMakeLists.txt
+++ b/autoCreateTemplate/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 # List the subdirectories to build...
 #============================================================================
 ADD_SUBDIRECTORY(genRosCppTemplate)
+ADD_SUBDIRECTORY(genRosPyTemplate)
 ##############################################################################
 #                           END of CMakeLists.txt
 ##############################################################################
